# tini

./: Cargo.toml  LICENSE  README.md  example.ini
.githooks/: pre-commit
examples/: converter.rs  delete-funcs.rs  item_vec.rs  iter.rs  iter_mut.rs  read-write-test.rs  reader.rs  sections.rs  test.rs
src/: error.rs  lib.rs  ordered_hashmap.rs  parser.rs  section.rs
