[package]
name = "tini"
description = "A tiny ini parsing library"
version = "0.9.0"
authors = ["Alexey Golubev <dr.freecx@gmail.com>", "Vova Abdrakhmanov <369565@gmail.com>"]
documentation = "https://docs.rs/tini"
repository = "https://github.com/pinecrew/tini"
keywords = ["ini", "configuration", "conf", "cfg"]
license = "BSD-3-Clause"
include = ["src/*.rs", "Cargo.toml", "README.md"]
autoexamples = true
edition = "2018"

[lib]
name = "tini"